@@ -1,5 +1,8 @@
 2011-05-20  Jason Merrill  <jason@redhat.com>
 
+	PR c++/48780
+	* cvt.c (type_promotes_to): Warn about promoting scoped enums.
+
 	PR c++/49066
 	* decl.c (duplicate_decls): Preserve DECL_DELETED_FN.
 
